--- a/style.css
+++ b/style.css
@@ -1,8 +1,28 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: black;
 }
 
-header {
+.cabecalho {
     background-color: #410a01;
     color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+.logo-cabecalho {
+    width: 20%;
+
+}
+
+.cabecalho-lista-item {
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 20px;
 }
